fix text wrap bug

--- a/src/style/_outerMethods.scss
+++ b/src/style/_outerMethods.scss
@@ -1790,7 +1790,7 @@
   }
 }
 
-@mixin text-wrap($v, $rwd: null) {
+@mixin text-wrap($v: wrap, $rwd: null) {
   @if $rwd==null {
     text-wrap: $v;
   } @else {
@@ -2704,7 +2704,7 @@
   @include text-transform($v, $sm);
 }
 
-@mixin sm\:text-wrap($v) {
+@mixin sm\:text-wrap($v: wrap) {
   @include text-wrap($v, $sm);
 }
 
@@ -3468,7 +3468,7 @@
   @include text-transform($v, $md);
 }
 
-@mixin md\:text-wrap($v) {
+@mixin md\:text-wrap($v: wrap) {
   @include text-wrap($v, $md);
 }
 
@@ -4232,7 +4232,7 @@
   @include text-transform($v, $lg);
 }
 
-@mixin lg\:text-wrap($v) {
+@mixin lg\:text-wrap($v: wrap) {
   @include text-wrap($v, $lg);
 }
 
@@ -4996,7 +4996,7 @@
   @include text-transform($v, $xl);
 }
 
-@mixin xl\:text-wrap($v) {
+@mixin xl\:text-wrap($v: wrap) {
   @include text-wrap($v, $xl);
 }
 
@@ -5760,7 +5760,7 @@
   @include text-transform($v, $\2xl);
 }
 
-@mixin \2xl\:text-wrap($v) {
+@mixin \2xl\:text-wrap($v: wrap) {
   @include text-wrap($v, $\2xl);
 }
 
